<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TN号码归属地</string>
    <string name="callerloc">号码归属地:</string>
    <string name="button_baidu">号码可疑？点击查看百度搜索结果</string>
    <string name="unknown_loc">未查到归属地</string>
    <string name="goto_handle">去接听/拒绝</string>
    <string name="baidu_search">百度该号码</string>
    <string name="hide_web">隐藏Web页面</string>
    <string name="check_search_result">查看搜索结果</string>
    <string name="app_enabled">已启用</string>
    <string name="app_disabled">未启用</string>
    <string name="select_txt_colr">选择文字颜色</string>
    <string name="input_to_query">输入号码查询归属地</string>
    <string name="input_number">输入号码</string>
    <string name="refresh_calllogs">更新通话记录</string>
    <string name="refresh_calllogs_detail">向陌生号码通话记录添加归属地</string>
    <string name="about">关于本程序</string>

    <string name="op_mb">中国移动</string>
    <string name="op_uc">中国联通</string>
    <string name="op_tl">中国电信</string>

    <string name="same_city">同城</string>
    <string name="city_beijing">北京市</string>
    <string name="fzz">400电话</string>
    <string name="ezz">800电话</string>

    <string name="incoming_call">来电</string>
    <string name="outgoing_call">呼叫</string>
    <string name="connected_call">通话中</string>
    <string name="missed_call">未接来电</string>
    <string name="ended_call">已结束</string>
    <string name="rang_time">共响铃 %f秒</string>

    <string name="color_name_white">白色</string>
    <string name="color_name_black">黑色</string>
    <string name="color_name_red">红色</string>
    <string name="color_name_grey">灰色</string>
    <string name="color_name_sky_blue">天蓝色</string>
    <string name="color_name_grass_green">草绿色</string>
    <string name="color_name_orange">橘色</string>
    <string name="color_name_pink">粉色</string>
    <string name="color_name_brown">棕色</string>
    <string name="color_name_deep_blue">深蓝色</string>
    <string name="color_name_bright_green">亮绿色</string>
    <string name="color_name_bright_yellow">亮黄色</string>

    <string name="email_label">任何疑问或建议，欢迎联系：</string>
    <string name="author_email">"tony.gao000@gmail.com"</string>
    <string name="app_info">本程序以悬浮窗显示来电或去电号码的归属地，也可向通话记录中添加归属地信息。本程序仅对中国大陆地区的号码有效。</string>

    <string name="config_info_in">来电时，在悬浮窗中显示归属地</string>
    <string name="config_info_out">去电时，在悬浮窗中显示归属地</string>

    <string name="init_db_wait_msg">首次启动，正在初始化数据库，可能需要几分钟，请稍等...</string>
    <string name="update_calllogs_wait_msg">正在更新通话记录，请稍等...</string>

    <plurals name="number_of_calllogs_updated">
        <item quantity="zero">没有可更新记录！</item>
        <item quantity="one">1条通话记录已更新！</item>
        <item quantity="other">%d条通话记录已更新！</item>
    </plurals>
</resources>