<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        layout="@layout/title_bar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="1dp"
        android:background="@color/bright_green" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/bg_black"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp" >
        <TextView
            android:id="@+id/query_num_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_to_query"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/search"
            android:clickable="true"
            android:onClick="onInputNumClicked" />
        <LinearLayout
            android:id="@+id/input_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone" >
            <EditText
                android:id="@+id/input_num_eidttext"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:background="@drawable/input_box"
                android:hint="@string/input_number"
                android:drawableLeft="@drawable/search"
                android:inputType="phone"
                android:imeOptions="actionSearch" />
            <ImageButton
                android:id="@+id/query_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/search"
                android:onClick="onQueryClicked" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_black"
        android:clickable="true"
        android:onClick="onUpdateCalllogsClicked"
        android:orientation="horizontal" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/refresh_calllogs" />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/refresh_calllogs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="2dp"
                android:layout_gravity="center_vertical"
                android:text="@string/refresh_calllogs"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:singleLine="true"
                android:gravity="top" />
            <TextView
                android:id="@+id/refresh_calllogs_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="2dp"
                android:layout_gravity="center_vertical"
                android:text="@string/refresh_calllogs_detail"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:singleLine="true"
                android:gravity="bottom" />
        </LinearLayout>
        <CheckBox
            android:id="@+id/update_calllogs_check"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginRight="2dp"
            android:onClick="onUpdateCalllogsCheckClicked"
            android:saveEnabled="true"
            android:soundEffectsEnabled="true"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:singleLine="true"
        android:text="@string/config_info_in" />

    <ToggleButton
        android:id="@+id/enable_incoming"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/toggle_button_selector"
        android:textOn="@string/app_enabled"
        android:textOff="@string/app_disabled"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:textColor="@color/white"
        android:soundEffectsEnabled="true"
        android:saveEnabled="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:singleLine="true"
        android:text="@string/config_info_out" />

    <ToggleButton
        android:id="@+id/enable_outgoing"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/toggle_button_selector"
        android:textOn="@string/app_enabled"
        android:textOff="@string/app_disabled"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:textColor="@color/white"
        android:soundEffectsEnabled="true"
        android:saveEnabled="true" />

    <LinearLayout 
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="15dp" >
        <TextView
            android:id="@+id/select_text_color_label"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="14sp"
            android:text="@string/select_txt_colr"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp" />
        <Spinner
            android:id="@+id/select_text_color_spinner"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:prompt="@string/select_txt_colr"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="15dp"
        android:paddingLeft="2dp"
        android:background="@drawable/bg_black"
        android:drawableLeft="@drawable/about"
        android:text="@string/about"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:clickable="true"
        android:onClick="onAboutClicked" />

</LinearLayout>